<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.larry_kai.nytimessearch.activities.SettingActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/begin_date"
        android:id="@+id/tvDate"
        android:layout_margin="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/tvBeginDate"
        android:layout_alignTop="@+id/tvDate"
        android:layout_toRightOf="@+id/tvDate"
        android:layout_toEndOf="@+id/tvDate"
        android:hint="@string/begin_date_hint"
        android:onClick="onClickBeginDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sort_order"
        android:id="@+id/tvOrder"
        android:layout_margin="20dp"
        android:layout_below="@+id/tvDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spOrder"
        android:layout_margin="20dp"
        android:layout_below="@+id/tvDate"
        android:layout_toRightOf="@+id/tvOrder"
        android:spinnerMode="dropdown"
        android:entries="@array/sort_order_options" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/news_desk_topics"
        android:id="@+id/tvTopics"
        android:layout_margin="20dp"
        android:layout_below="@+id/tvOrder"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spTopics"
        android:layout_margin="20dp"
        android:layout_below="@+id/tvOrder"
        android:layout_toRightOf="@+id/tvTopics"
        android:layout_toEndOf="@+id/tvTopics"
        android:spinnerMode="dropdown"
        android:entries="@array/topics_options" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:onClick="onClickSave"
        android:layout_below="@+id/tvTopics"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_margin="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/btnCancel"
        android:onClick="onClickCancel"
        android:layout_alignTop="@+id/btnSave"
        android:layout_toRightOf="@+id/btnSave"
        android:layout_toEndOf="@+id/btnSave" />

</RelativeLayout>
